# GC_assignment

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  number_generators.py  pyproject.toml  slot_machine.py
